WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
155700
ASSERTION FAILED: contentSize >= 0 in WebCore::RenderFlexibleBox::adjustChildSizeForMinAndMax
https://bugs.webkit.org/show_bug.cgi?id=155700
Summary
ASSERTION FAILED: contentSize >= 0 in WebCore::RenderFlexibleBox::adjustChild...
Renata Hodovan
Reported
2016-03-20 10:37:09 PDT
Created
attachment 274543
[details]
Test case Load the attached test with minibrowser: <style> * { display: inline-flex; flex-basis: 99; } </style> <frameset></frameset> OS: Ubuntu 15.10, x86_64 (also validated on Mac OS X 10.11.1 (x86_64), x86_64) Checked build: debug EFL Checked version: d5bbb4a Backtrace: ASSERTION FAILED: contentSize >= 0 ../../Source/WebCore/rendering/RenderFlexibleBox.cpp(876) : WebCore::LayoutUnit WebCore::RenderFlexibleBox::adjustChildSizeForMinAndMax(WebCore::RenderBox&, WebCore::LayoutUnit) 1 0x7f5488cd43a6 WTFCrash 2 0x7f5487b6761e WebCore::RenderFlexibleBox::adjustChildSizeForMinAndMax(WebCore::RenderBox&, WebCore::LayoutUnit) 3 0x7f5487b67c30 WebCore::RenderFlexibleBox::computeNextFlexLine(WTF::Vector<WebCore::RenderBox*, 0ul, WTF::CrashOnOverflow, 16ul>&, WebCore::LayoutUnit&, double&, double&, WebCore::LayoutUnit&, bool&) 4 0x7f5487b6655d WebCore::RenderFlexibleBox::layoutFlexItems(bool, WTF::Vector<WebCore::RenderFlexibleBox::LineContext, 0ul, WTF::CrashOnOverflow, 16ul>&) 5 0x7f5487b64800 WebCore::RenderFlexibleBox::layoutBlock(bool, WebCore::LayoutUnit) 6 0x7f5487a9bdbc WebCore::RenderBlock::layout() 7 0x7f5487acbe5e WebCore::RenderBlockFlow::layoutBlockChild(WebCore::RenderBox&, WebCore::RenderBlockFlow::MarginInfo&, WebCore::LayoutUnit&, WebCore::LayoutUnit&) 8 0x7f5487acb99c WebCore::RenderBlockFlow::layoutBlockChildren(bool, WebCore::LayoutUnit&) 9 0x7f5487acae34 WebCore::RenderBlockFlow::layoutBlock(bool, WebCore::LayoutUnit) 10 0x7f5487a9bdbc WebCore::RenderBlock::layout() 11 0x7f5487cb78af WebCore::RenderView::layoutContent(WebCore::LayoutState const&) 12 0x7f5487cb7fad WebCore::RenderView::layout() 13 0x7f5487855697 WebCore::FrameView::layout(bool) 14 0x7f54872a04f6 WebCore::Document::implicitClose() 15 0x7f548771e599 WebCore::FrameLoader::checkCallImplicitClose() 16 0x7f548771e2c9 WebCore::FrameLoader::checkCompleted() 17 0x7f548771e03f WebCore::FrameLoader::finishedParsing() 18 0x7f54872ab13a WebCore::Document::finishedParsing() 19 0x7f54885955bb WebCore::HTMLConstructionSite::finishedParsing() 20 0x7f5487626526 WebCore::HTMLTreeBuilder::finished() 21 0x7f54875f6160 WebCore::HTMLDocumentParser::end() 22 0x7f54875f622e WebCore::HTMLDocumentParser::attemptToRunDeferredScriptsAndEnd() 23 0x7f54875f4ed3 WebCore::HTMLDocumentParser::prepareToStopParsing() 24 0x7f54875f6269 WebCore::HTMLDocumentParser::attemptToEnd() 25 0x7f54875f6319 WebCore::HTMLDocumentParser::finish() 26 0x7f548770d790 WebCore::DocumentWriter::end() 27 0x7f54876f5560 WebCore::DocumentLoader::finishedLoading(double) 28 0x7f54876f52aa WebCore::DocumentLoader::notifyFinished(WebCore::CachedResource*) 29 0x7f54877a5163 WebCore::CachedResource::checkNotify() 30 0x7f54877a5280 WebCore::CachedResource::finishLoading(WebCore::SharedBuffer*) 31 0x7f54877a1396 WebCore::CachedRawResource::finishLoading(WebCore::SharedBuffer*)
Attachments
Test case
(84 bytes, text/html)
2016-03-20 10:37 PDT
,
Renata Hodovan
no flags
Details
Patch
(6.15 KB, patch)
2016-08-24 14:43 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brent Fulgham
Comment 1
2016-08-05 09:47:25 PDT
This reproduces in
r204037
.
Radar WebKit Bug Importer
Comment 2
2016-08-05 09:47:53 PDT
<
rdar://problem/27720727
>
alan
Comment 3
2016-08-24 14:43:02 PDT
Created
attachment 286892
[details]
Patch
Dave Hyatt
Comment 4
2016-08-24 14:44:59 PDT
Comment on
attachment 286892
[details]
Patch r=me
WebKit Commit Bot
Comment 5
2016-08-24 18:56:48 PDT
Comment on
attachment 286892
[details]
Patch Clearing flags on attachment: 286892 Committed
r204951
: <
http://trac.webkit.org/changeset/204951
>
WebKit Commit Bot
Comment 6
2016-08-24 18:57:44 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug