ASSERTION FAILED: contentSize >= 0 in WebCore::RenderFlexibleBox::adjustChildSizeForMinAndMax https://bugs.webkit.org/show_bug.cgi?id=155700 <rdar://problem/27720727>

Reviewed by David Hyatt.

Source/WebCore:

RenderBox::m_minPreferredLogicalWidth/m_maxPreferredLogicalWidth don't need special initial value since
preferredLogicalWidthsDirty flag guards them. -1 as initial value can cause problems for renderers that don't
override RenderBox::computePreferredLogicalWidths().

Test: fast/ruby/assert-when-content-size-is-negative.html

* rendering/RenderBox.cpp:
(WebCore::RenderBox::RenderBox):
(WebCore::RenderBox::dirtyLineBoxes):
(WebCore::RenderBox::deleteLineBoxWrapper):
* rendering/RenderBox.h:

LayoutTests:

* fast/ruby/assert-when-content-size-is-negative-expected.txt: Added.
* fast/ruby/assert-when-content-size-is-negative.html: Added.


Canonical link: https://commits.webkit.org/179332@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@204951 268f45cc-cd09-0410-ab3c-d52691b4dbfc